# uciadapter

./: .gitlab-ci.yml  CMakeLists.txt  README.md
src/: Process.hpp  ProcessLinux.hpp  ProcessWindows.cpp  UCI.cpp  UCI.hpp  UCI.hpp.in
tests/: CMakeLists.txt
